--- a/src/index.html
+++ b/src/index.html
@@ -27,13 +27,13 @@
     <div id="task-btn">New task</div>
     <div id="paper-btn">New paper</div>
 </div>
-<div id="project-window">
+<form id="project-window">
     <button id="exit-project-window" class="exit">x</button>
     <h2 id="project-window-header">New Paper</h2>
-    <input type="text" id="project-title" placeholder="Title">
-    <button id="create-project-btn">Create</button>
-</div>
-<div id="task-window">
+    <input type="text" id="project-title" placeholder="Title" required>
+    <button type="submit" id="create-project-btn">Create</button>
+</form>
+<form id="task-window">
     <button id="exit-task-window" class="exit">x</button>
     <h2 id="task-window-header">New Task</h2>
     <p class="categories">Choose category:
@@ -41,10 +41,10 @@
         <div id="normal" class="category">Normal</div>
         <div id="longterm" class="category">Longterm</div>
     </p>
-    <input type="text" id="task-title" placeholder="Title">
-    <input type="text" id="notes" placeholder="Notes">
-    <input type="date" id="deadline" placeholder="Deadline">
-    <button id="create-task-btn">Create</button>
-</div>
+    <input type="text" id="task-title" placeholder="Title" maxlength="20" required>
+    <input type="text" id="notes" placeholder="Notes" maxlength="150" >
+    <input type="date" lang="en" id="deadline" placeholder="Deadline" >
+    <button type="submit" id="create-task-btn">Create</button>
+</form>
 
 </html>
