corrected project window

--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
 
 <div id="add-window">
     <div id="task-btn">New task</div>
-    <div id="paper-btn">New paper</div>
+    <div id="paper-btn">New project</div>
 </div>
 <form id="project-window">
     <button id="exit-project-window" class="exit">x</button>
