corrected paddings and maxwidth

--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
 </div>
 <form id="project-window">
     <button id="exit-project-window" class="exit">x</button>
-    <h2 id="project-window-header">New Paper</h2>
+    <h2 id="project-window-header">New Project</h2>
     <input type="text" id="project-title" placeholder="Title" required>
     <button type="submit" id="create-project-btn">Create</button>
 </form>
